include/xprs.h


typedef struct xo_prob_struct* XPRSprob;
#define XPRS_ALG_DEFAULT                  1
#define XPRS_ALG_DUAL                     2
#define XPRS_ALG_PRIMAL                   3
#define XPRS_ALG_BARRIER                  4
#define XPRS_ALG_NETWORK                  5
#define XPRS_STOP_NONE                     0
#define XPRS_STOP_TIMELIMIT                1
#define XPRS_STOP_CTRLC                    2
#define XPRS_STOP_NODELIMIT                3
#define XPRS_STOP_ITERLIMIT                4
#define XPRS_STOP_MIPGAP                   5
#define XPRS_STOP_SOLLIMIT                 6
#define XPRS_STOP_USER                     9
#define XPRS_ANA_AUTOMATIC                -1
#define XPRS_ANA_NEVER                    0
#define XPRS_ANA_ALWAYS                   1
#define XPRS_BOOL_OFF                      0
#define XPRS_BOOL_ON                       1
#define XPRS_BACKTRACKALG_BEST_ESTIMATE            2
#define XPRS_BACKTRACKALG_BEST_BOUND               3
#define XPRS_BACKTRACKALG_DEEPEST_NODE             4
#define XPRS_BACKTRACKALG_HIGHEST_NODE             5
#define XPRS_BACKTRACKALG_EARLIEST_NODE            6
#define XPRS_BACKTRACKALG_LATEST_NODE              7
#define XPRS_BACKTRACKALG_RANDOM                   8
#define XPRS_BACKTRACKALG_MIN_INFEAS               9
#define XPRS_BACKTRACKALG_BEST_ESTIMATE_MIN_INFEAS 10
#define XPRS_BACKTRACKALG_DEEPEST_BEST_ESTIMATE    11
#define XPRS_BRANCH_MIN_EST_FIRST            0
#define XPRS_BRANCH_MAX_EST_FIRST            1
#define XPRS_ALG_PULL_CHOLESKY            0
#define XPRS_ALG_PUSH_CHOLESKY            1
#define XPRS_XDRPBEFORE_CROSSOVER         1
#define XPRS_XDRPINSIDE_CROSSOVER         2
#define XPRS_XDRPAGGRESSIVE_BEFORE_CROSSOVER 4
#define XPRS_DUALGRADIENT_AUTOMATIC                -1
#define XPRS_DUALGRADIENT_DEVEX                    0
#define XPRS_DUALGRADIENT_STEEPESTEDGE             1
#define XPRS_DUALSTRATEGY_REMOVE_INFEAS_WITH_PRIMAL 0
#define XPRS_DUALSTRATEGY_REMOVE_INFEAS_WITH_DUAL  1
#define XPRS_FEASIBILITYPUMP_NEVER                    0
#define XPRS_FEASIBILITYPUMP_ALWAYS                   1
#define XPRS_FEASIBILITYPUMP_LASTRESORT               2
#define XPRS_HEURSEARCH_LOCAL_SEARCH_LARGE_NEIGHBOURHOOD 0
#define XPRS_HEURSEARCH_LOCAL_SEARCH_NODE_NEIGHBOURHOOD 1
#define XPRS_HEURSEARCH_LOCAL_SEARCH_SOLUTION_NEIGHBOURHOOD 2
#define XPRS_HEURSTRATEGY_AUTOMATIC                -1
#define XPRS_HEURSTRATEGY_NONE                     0
#define XPRS_HEURSTRATEGY_BASIC                    1
#define XPRS_HEURSTRATEGY_ENHANCED                 2
#define XPRS_HEURSTRATEGY_EXTENSIVE                3
#define XPRS_NODESELECTION_LOCAL_FIRST              1
#define XPRS_NODESELECTION_BEST_FIRST               2
#define XPRS_NODESELECTION_LOCAL_DEPTH_FIRST        3
#define XPRS_NODESELECTION_BEST_FIRST_THEN_LOCAL_FIRST 4
#define XPRS_NODESELECTION_DEPTH_FIRST              5
#define XPRS_OUTPUTLOG_NO_OUTPUT                0
#define XPRS_OUTPUTLOG_FULL_OUTPUT              1
#define XPRS_OUTPUTLOG_ERRORS_AND_WARNINGS      2
#define XPRS_OUTPUTLOG_ERRORS                   3
#define XPRS_PREPROBING_AUTOMATIC                -1
#define XPRS_PREPROBING_DISABLED                 0
#define XPRS_PREPROBING_LIGHT                    1
#define XPRS_PREPROBING_FULL                     2
#define XPRS_PREPROBING_FULL_AND_REPEAT          3
#define XPRS_PRESOLVEOPS_SINGLETONCOLUMNREMOVAL   1
#define XPRS_PRESOLVEOPS_SINGLETONROWREMOVAL      2
#define XPRS_PRESOLVEOPS_FORCINGROWREMOVAL        4
#define XPRS_PRESOLVEOPS_DUALREDUCTIONS           8
#define XPRS_PRESOLVEOPS_REDUNDANTROWREMOVAL      16
#define XPRS_PRESOLVEOPS_DUPLICATECOLUMNREMOVAL   32
#define XPRS_PRESOLVEOPS_DUPLICATEROWREMOVAL      64
#define XPRS_PRESOLVEOPS_STRONGDUALREDUCTIONS     128
#define XPRS_PRESOLVEOPS_VARIABLEELIMINATIONS     256
#define XPRS_PRESOLVEOPS_NOIPREDUCTIONS           512
#define XPRS_PRESOLVEOPS_NOADVANCEDIPREDUCTIONS   2048
#define XPRS_PRESOLVEOPS_LINEARLYDEPENDANTROWREMOVAL 16384
#define XPRS_PRESOLVEOPS_NOINTEGERVARIABLEANDSOSDETECTION 32768
#define XPRS_PRESOLVESTATE_PROBLEMLOADED            (1<<0)
#define XPRS_PRESOLVESTATE_PROBLEMLPPRESOLVED       (1<<1)
#define XPRS_PRESOLVESTATE_PROBLEMMIPPRESOLVED      (1<<2)
#define XPRS_PRESOLVESTATE_SOLUTIONVALID            (1<<7)
#define XPRS_MIPPRESOLVE_REDUCED_COST_FIXING      1
#define XPRS_MIPPRESOLVE_LOGIC_PREPROCESSING      2
#define XPRS_MIPPRESOLVE_ALLOW_CHANGE_BOUNDS      8
#define XPRS_PRESOLVE_NOPRIMALINFEASIBILITY    -1
#define XPRS_PRESOLVE_NONE                     0
#define XPRS_PRESOLVE_DEFAULT                  1
#define XPRS_PRESOLVE_KEEPREDUNDANTBOUNDS      2
#define XPRS_PRICING_PARTIAL                  -1
#define XPRS_PRICING_DEFAULT                  0
#define XPRS_PRICING_DEVEX                    1
#define XPRS_CUTSTRATEGY_DEFAULT                  -1
#define XPRS_CUTSTRATEGY_NONE                     0
#define XPRS_CUTSTRATEGY_CONSERVATIVE             1
#define XPRS_CUTSTRATEGY_MODERATE                 2
#define XPRS_CUTSTRATEGY_AGGRESSIVE               3
#define XPRS_VARSELECTION_AUTOMATIC                -1
#define XPRS_VARSELECTION_MIN_UPDOWN_PSEUDO_COSTS  1
#define XPRS_VARSELECTION_SUM_UPDOWN_PSEUDO_COSTS  2
#define XPRS_VARSELECTION_MAX_UPDOWN_PSEUDO_COSTS_PLUS_TWICE_MIN 3
#define XPRS_VARSELECTION_MAX_UPDOWN_PSEUDO_COSTS  4
#define XPRS_VARSELECTION_DOWN_PSEUDO_COST         5
#define XPRS_VARSELECTION_UP_PSEUDO_COST           6
#define XPRS_SCALING_ROW_SCALING              1
#define XPRS_SCALING_COLUMN_SCALING           2
#define XPRS_SCALING_ROW_SCALING_AGAIN        4
#define XPRS_SCALING_MAXIMUM                  8
#define XPRS_SCALING_CURTIS_REID              16
#define XPRS_SCALING_BY_MAX_ELEM_NOT_GEO_MEAN 32
#define XPRS_SCALING_OBJECTIVE_SCALING        64
#define XPRS_SCALING_EXCLUDE_QUADRATIC_FROM_SCALE_FACTOR 128
#define XPRS_SCALING_IGNORE_QUADRATIC_ROW_PART 256
#define XPRS_SCALING_BEFORE_PRESOLVE          512
#define XPRS_SCALING_NO_SCALING_ROWS_UP       1024
#define XPRS_SCALING_NO_SCALING_COLUMNS_DOWN  2048
#define XPRS_SCALING_SIMPLEX_OBJECTIVE_SCALING 4096
#define XPRS_SCALING_RHS_SCALING              8192
#define XPRS_SCALING_NO_AGGRESSIVE_Q_SCALING  16384
#define XPRS_SCALING_SLACK_SCALING            32768
#define XPRS_CUTSELECT_CLIQUE                   (32+1823)
#define XPRS_CUTSELECT_MIR                      (64+1823)
#define XPRS_CUTSELECT_COVER                    (128+1823)
#define XPRS_CUTSELECT_FLOWPATH                 (2048+1823)
#define XPRS_CUTSELECT_IMPLICATION              (4096+1823)
#define XPRS_CUTSELECT_LIFT_AND_PROJECT         (8192+1823)
#define XPRS_CUTSELECT_DISABLE_CUT_ROWS         (16384+1823)
#define XPRS_CUTSELECT_GUB_COVER                (32768+1823)
#define XPRS_CUTSELECT_DEFAULT                  (-1)
#define XPRS_REFINEOPS_LPOPTIMAL                1
#define XPRS_REFINEOPS_MIPSOLUTION              2
#define XPRS_REFINEOPS_MIPOPTIMAL               4
#define XPRS_REFINEOPS_MIPNODELP                8
#define XPRS_DUALIZEOPS_SWITCHALGORITHM          1
#define XPRS_TREEDIAGNOSTICS_MEMORY_USAGE_SUMMARIES   1
#define XPRS_TREEDIAGNOSTICS_MEMORY_SAVED_REPORTS     2
#define XPRS_BARPRESOLVEOPS_STANDARD_PRESOLVE        0
#define XPRS_BARPRESOLVEOPS_EXTRA_BARRIER_PRESOLVE   1
#define XPRS_PRECOEFELIM_DISABLED                 0
#define XPRS_PRECOEFELIM_AGGRESSIVE               1
#define XPRS_PRECOEFELIM_CAUTIOUS                 2
#define XPRS_PREDOMROW_AUTOMATIC                -1
#define XPRS_PREDOMROW_DISABLED                 0
#define XPRS_PREDOMROW_CAUTIOUS                 1
#define XPRS_PREDOMROW_MEDIUM                   2
#define XPRS_PREDOMROW_AGGRESSIVE               3
#define XPRS_PREDOMCOL_AUTOMATIC                -1
#define XPRS_PREDOMCOL_DISABLED                 0
#define XPRS_PREDOMCOL_CAUTIOUS                 1
#define XPRS_PREDOMCOL_AGGRESSIVE               2
#define XPRS_PRIMALUNSHIFT_ALLOW_DUAL_UNSHIFT       0
#define XPRS_PRIMALUNSHIFT_NO_DUAL_UNSHIFT          1
#define XPRS_REPAIRINDEFINITEQ_REPAIR_IF_POSSIBLE       0
#define XPRS_REPAIRINDEFINITEQ_NO_REPAIR                1
#define XPRS_OBJ_MINIMIZE                 1
#define XPRS_OBJ_MAXIMIZE                 -1
#define XPRS_TYPE_NOTDEFINED               0
#define XPRS_TYPE_INT                      1
#define XPRS_TYPE_INT64                    2
#define XPRS_TYPE_DOUBLE                   3
#define XPRS_TYPE_STRING                   4
#define XPRS_QCONVEXITY_UNKNOWN                  -1
#define XPRS_QCONVEXITY_NONCONVEX                0
#define XPRS_QCONVEXITY_CONVEX                   1
#define XPRS_QCONVEXITY_REPAIRABLE               2
#define XPRS_QCONVEXITY_CONVEXCONE               3
#define XPRS_QCONVEXITY_CONECONVERTABLE          4
#define XPRS_SOLINFO_ABSPRIMALINFEAS          0
#define XPRS_SOLINFO_RELPRIMALINFEAS          1
#define XPRS_SOLINFO_ABSDUALINFEAS            2
#define XPRS_SOLINFO_RELDUALINFEAS            3
#define XPRS_SOLINFO_MAXMIPFRACTIONAL         4
#define XPRS_ISUSERSOLUTION                 0x1
#define XPRS_ISREPROCESSEDUSERSOLUTION      0x2
int XPRS_CC XPRScopycallbacks(XPRSprob dest, XPRSprob src);
int XPRS_CC XPRScopycontrols(XPRSprob dest, XPRSprob src);
int XPRS_CC XPRScopyprob(XPRSprob dest, XPRSprob src, const char* probname);
int XPRS_CC XPRScreateprob(XPRSprob* _probholder);
int XPRS_CC XPRSdestroyprob(XPRSprob _prob);
int XPRS_CC XPRSinit(const char* path);
int XPRS_CC XPRSfree(void);
int XPRS_CC XPRSgetbanner(char* banner);
int XPRS_CC XPRSgetversion(char* version);
int XPRS_CC XPRSgetdaysleft(int* daysleft);
int XPRS_CC XPRSsetcheckedmode(int checked_mode);
int XPRS_CC XPRSgetcheckedmode(int* r_checked_mode);
int XPRS_CC XPRSlicense(int* _i1, char* _c1);
int XPRS_CC XPRSbeginlicensing(int* r_dontAlreadyHaveLicense);
int XPRS_CC XPRSendlicensing(void);
int XPRS_CC XPRSgetlicerrmsg(char* msg, int len);
int XPRS_CC XPRSinterrupt(XPRSprob prob, int reason);