include/xprs.bas


' Enumeration values relating to DEFAULTALG
Global Const XPRS_ALG_DEFAULT = 1
Global Const XPRS_ALG_DUAL = 2
Global Const XPRS_ALG_PRIMAL = 3
Global Const XPRS_ALG_BARRIER = 4
Global Const XPRS_ALG_NETWORK = 5

' Enumeration values relating to XPRSinterrupt
Global Const XPRS_STOP_NONE = 0
Global Const XPRS_STOP_TIMELIMIT = 1
Global Const XPRS_STOP_CTRLC = 2
Global Const XPRS_STOP_NODELIMIT = 3
Global Const XPRS_STOP_ITERLIMIT = 4
Global Const XPRS_STOP_MIPGAP = 5
Global Const XPRS_STOP_SOLLIMIT = 6
Global Const XPRS_STOP_USER = 9

' Enumeration values relating to AlwaysNeverOrAutomatic
Global Const XPRS_ANA_AUTOMATIC = -1
Global Const XPRS_ANA_NEVER = 0
Global Const XPRS_ANA_ALWAYS = 1

' Enumeration values relating to OnOrOff
Global Const XPRS_BOOL_OFF = 0
Global Const XPRS_BOOL_ON = 1

' Enumeration values relating to BACKTRACK
Global Const XPRS_BACKTRACKALG_BEST_ESTIMATE = 2
Global Const XPRS_BACKTRACKALG_BEST_BOUND = 3
Global Const XPRS_BACKTRACKALG_DEEPEST_NODE = 4
Global Const XPRS_BACKTRACKALG_HIGHEST_NODE = 5
Global Const XPRS_BACKTRACKALG_EARLIEST_NODE = 6
Global Const XPRS_BACKTRACKALG_LATEST_NODE = 7
Global Const XPRS_BACKTRACKALG_RANDOM = 8
Global Const XPRS_BACKTRACKALG_MIN_INFEAS = 9
Global Const XPRS_BACKTRACKALG_BEST_ESTIMATE_MIN_INFEAS = 10
Global Const XPRS_BACKTRACKALG_DEEPEST_BEST_ESTIMATE = 11

' Enumeration values relating to BRANCHCHOICE
Global Const XPRS_BRANCH_MIN_EST_FIRST = 0
Global Const XPRS_BRANCH_MAX_EST_FIRST = 1

' Enumeration values relating to CHOLESKYALG
Global Const XPRS_ALG_PULL_CHOLESKY = 0
Global Const XPRS_ALG_PUSH_CHOLESKY = 1

' Enumeration values relating to CROSSOVERDRP
Global Const XPRS_XDRPBEFORE_CROSSOVER = 1
Global Const XPRS_XDRPINSIDE_CROSSOVER = 2
Global Const XPRS_XDRPAGGRESSIVE_BEFORE_CROSSOVER = 4

' Enumeration values relating to DUALGRADIENT
Global Const XPRS_DUALGRADIENT_AUTOMATIC = -1
Global Const XPRS_DUALGRADIENT_DEVEX = 0
Global Const XPRS_DUALGRADIENT_STEEPESTEDGE = 1

' Enumeration values relating to DUALSTRATEGY
Global Const XPRS_DUALSTRATEGY_REMOVE_INFEAS_WITH_PRIMAL = 0
Global Const XPRS_DUALSTRATEGY_REMOVE_INFEAS_WITH_DUAL = 1

' Enumeration values relating to FEASIBILITYPUMP
Global Const XPRS_FEASIBILITYPUMP_NEVER = 0
Global Const XPRS_FEASIBILITYPUMP_ALWAYS = 1
Global Const XPRS_FEASIBILITYPUMP_LASTRESORT = 2

' Enumeration values relating to HEURSEARCHSELECT
Global Const XPRS_HEURSEARCH_LOCAL_SEARCH_LARGE_NEIGHBOURHOOD = 0
Global Const XPRS_HEURSEARCH_LOCAL_SEARCH_NODE_NEIGHBOURHOOD = 1
Global Const XPRS_HEURSEARCH_LOCAL_SEARCH_SOLUTION_NEIGHBOURHOOD = 2

' Enumeration values relating to HEURSTRATEGY
Global Const XPRS_HEURSTRATEGY_AUTOMATIC = -1
Global Const XPRS_HEURSTRATEGY_NONE = 0
Global Const XPRS_HEURSTRATEGY_BASIC = 1
Global Const XPRS_HEURSTRATEGY_ENHANCED = 2
Global Const XPRS_HEURSTRATEGY_EXTENSIVE = 3

' Enumeration values relating to NODESELECTION
Global Const XPRS_NODESELECTION_LOCAL_FIRST = 1
Global Const XPRS_NODESELECTION_BEST_FIRST = 2
Global Const XPRS_NODESELECTION_LOCAL_DEPTH_FIRST = 3
Global Const XPRS_NODESELECTION_BEST_FIRST_THEN_LOCAL_FIRST = 4
Global Const XPRS_NODESELECTION_DEPTH_FIRST = 5

' Enumeration values relating to OUTPUTLOG
Global Const XPRS_OUTPUTLOG_NO_OUTPUT = 0
Global Const XPRS_OUTPUTLOG_FULL_OUTPUT = 1
Global Const XPRS_OUTPUTLOG_ERRORS_AND_WARNINGS = 2
Global Const XPRS_OUTPUTLOG_ERRORS = 3

' Enumeration values relating to PREPROBING
Global Const XPRS_PREPROBING_AUTOMATIC = -1
Global Const XPRS_PREPROBING_DISABLED = 0
Global Const XPRS_PREPROBING_LIGHT = 1
Global Const XPRS_PREPROBING_FULL = 2
Global Const XPRS_PREPROBING_FULL_AND_REPEAT = 3

' Enumeration values relating to PRESOLVEOPS
Global Const XPRS_PRESOLVEOPS_SINGLETONCOLUMNREMOVAL = 1
Global Const XPRS_PRESOLVEOPS_SINGLETONROWREMOVAL = 2
Global Const XPRS_PRESOLVEOPS_FORCINGROWREMOVAL = 4
Global Const XPRS_PRESOLVEOPS_DUALREDUCTIONS = 8
Global Const XPRS_PRESOLVEOPS_REDUNDANTROWREMOVAL = 16
Global Const XPRS_PRESOLVEOPS_DUPLICATECOLUMNREMOVAL = 32
Global Const XPRS_PRESOLVEOPS_DUPLICATEROWREMOVAL = 64
Global Const XPRS_PRESOLVEOPS_STRONGDUALREDUCTIONS = 128
Global Const XPRS_PRESOLVEOPS_VARIABLEELIMINATIONS = 256
Global Const XPRS_PRESOLVEOPS_NOIPREDUCTIONS = 512
Global Const XPRS_PRESOLVEOPS_NOADVANCEDIPREDUCTIONS = 2048
Global Const XPRS_PRESOLVEOPS_LINEARLYDEPENDANTROWREMOVAL = 16384
Global Const XPRS_PRESOLVEOPS_NOINTEGERVARIABLEANDSOSDETECTION = 32768

' Enumeration values relating to PRESOLVESTATE
Global Const XPRS_PRESOLVESTATE_PROBLEMLOADED = 1
Global Const XPRS_PRESOLVESTATE_PROBLEMLPPRESOLVED = 2
Global Const XPRS_PRESOLVESTATE_PROBLEMMIPPRESOLVED = 4
Global Const XPRS_PRESOLVESTATE_SOLUTIONVALID = 128

' Enumeration values relating to MIPPRESOLVE
Global Const XPRS_MIPPRESOLVE_REDUCED_COST_FIXING = 1
Global Const XPRS_MIPPRESOLVE_LOGIC_PREPROCESSING = 2
Global Const XPRS_MIPPRESOLVE_ALLOW_CHANGE_BOUNDS = 8

' Enumeration values relating to PRESOLVE
Global Const XPRS_PRESOLVE_NOPRIMALINFEASIBILITY = -1
Global Const XPRS_PRESOLVE_NONE = 0
Global Const XPRS_PRESOLVE_DEFAULT = 1
Global Const XPRS_PRESOLVE_KEEPREDUNDANTBOUNDS = 2

' Enumeration values relating to PRICINGALG
Global Const XPRS_PRICING_PARTIAL = -1
Global Const XPRS_PRICING_DEFAULT = 0
Global Const XPRS_PRICING_DEVEX = 1

' Enumeration values relating to CUTSTRATEGY
Global Const XPRS_CUTSTRATEGY_DEFAULT = -1
Global Const XPRS_CUTSTRATEGY_NONE = 0
Global Const XPRS_CUTSTRATEGY_CONSERVATIVE = 1
Global Const XPRS_CUTSTRATEGY_MODERATE = 2
Global Const XPRS_CUTSTRATEGY_AGGRESSIVE = 3

' Enumeration values relating to VARSELECTION
Global Const XPRS_VARSELECTION_AUTOMATIC = -1
Global Const XPRS_VARSELECTION_MIN_UPDOWN_PSEUDO_COSTS = 1
Global Const XPRS_VARSELECTION_SUM_UPDOWN_PSEUDO_COSTS = 2
Global Const XPRS_VARSELECTION_MAX_UPDOWN_PSEUDO_COSTS_PLUS_TWICE_MIN = 3
Global Const XPRS_VARSELECTION_MAX_UPDOWN_PSEUDO_COSTS = 4
Global Const XPRS_VARSELECTION_DOWN_PSEUDO_COST = 5
Global Const XPRS_VARSELECTION_UP_PSEUDO_COST = 6

' Enumeration values relating to SCALING
Global Const XPRS_SCALING_ROW_SCALING = 1
Global Const XPRS_SCALING_COLUMN_SCALING = 2
Global Const XPRS_SCALING_ROW_SCALING_AGAIN = 4
Global Const XPRS_SCALING_MAXIMUM = 8
Global Const XPRS_SCALING_CURTIS_REID = 16
Global Const XPRS_SCALING_BY_MAX_ELEM_NOT_GEO_MEAN = 32
Global Const XPRS_SCALING_OBJECTIVE_SCALING = 64
Global Const XPRS_SCALING_EXCLUDE_QUADRATIC_FROM_SCALE_FACTOR = 128
Global Const XPRS_SCALING_IGNORE_QUADRATIC_ROW_PART = 256
Global Const XPRS_SCALING_BEFORE_PRESOLVE = 512
Global Const XPRS_SCALING_NO_SCALING_ROWS_UP = 1024
Global Const XPRS_SCALING_NO_SCALING_COLUMNS_DOWN = 2048
Global Const XPRS_SCALING_SIMPLEX_OBJECTIVE_SCALING = 4096
Global Const XPRS_SCALING_RHS_SCALING = 8192
Global Const XPRS_SCALING_NO_AGGRESSIVE_Q_SCALING = 16384
Global Const XPRS_SCALING_SLACK_SCALING = 32768

' Enumeration values relating to CUTSELECT
Global Const XPRS_CUTSELECT_CLIQUE = (32+1823)
Global Const XPRS_CUTSELECT_MIR = (64+1823)
Global Const XPRS_CUTSELECT_COVER = (128+1823)
Global Const XPRS_CUTSELECT_FLOWPATH = (2048+1823)
Global Const XPRS_CUTSELECT_IMPLICATION = (4096+1823)
Global Const XPRS_CUTSELECT_LIFT_AND_PROJECT = (8192+1823)
Global Const XPRS_CUTSELECT_DISABLE_CUT_ROWS = (16384+1823)
Global Const XPRS_CUTSELECT_GUB_COVER = (32768+1823)
Global Const XPRS_CUTSELECT_DEFAULT = (-1)

' Enumeration values relating to REFINEOPS
Global Const XPRS_REFINEOPS_LPOPTIMAL = 1
Global Const XPRS_REFINEOPS_MIPSOLUTION = 2
Global Const XPRS_REFINEOPS_MIPOPTIMAL = 4
Global Const XPRS_REFINEOPS_MIPNODELP = 8

' Enumeration values relating to DUALIZEOPS
Global Const XPRS_DUALIZEOPS_SWITCHALGORITHM = 1

' Enumeration values relating to TREEDIAGNOSTICS
Global Const XPRS_TREEDIAGNOSTICS_MEMORY_USAGE_SUMMARIES = 1
Global Const XPRS_TREEDIAGNOSTICS_MEMORY_SAVED_REPORTS = 2

' Enumeration values relating to BARPRESOLVEOPS
Global Const XPRS_BARPRESOLVEOPS_STANDARD_PRESOLVE = 0
Global Const XPRS_BARPRESOLVEOPS_EXTRA_BARRIER_PRESOLVE = 1

' Enumeration values relating to PRECOEFELIM
Global Const XPRS_PRECOEFELIM_DISABLED = 0
Global Const XPRS_PRECOEFELIM_AGGRESSIVE = 1
Global Const XPRS_PRECOEFELIM_CAUTIOUS = 2

' Enumeration values relating to PREDOMROW
Global Const XPRS_PREDOMROW_AUTOMATIC = -1
Global Const XPRS_PREDOMROW_DISABLED = 0
Global Const XPRS_PREDOMROW_CAUTIOUS = 1
Global Const XPRS_PREDOMROW_MEDIUM = 2
Global Const XPRS_PREDOMROW_AGGRESSIVE = 3

' Enumeration values relating to PREDOMCOL
Global Const XPRS_PREDOMCOL_AUTOMATIC = -1
Global Const XPRS_PREDOMCOL_DISABLED = 0
Global Const XPRS_PREDOMCOL_CAUTIOUS = 1
Global Const XPRS_PREDOMCOL_AGGRESSIVE = 2

' Enumeration values relating to PRIMALUNSHIFT
Global Const XPRS_PRIMALUNSHIFT_ALLOW_DUAL_UNSHIFT = 0
Global Const XPRS_PRIMALUNSHIFT_NO_DUAL_UNSHIFT = 1

' Enumeration values relating to REPAIRINDEFINITEQ
Global Const XPRS_REPAIRINDEFINITEQ_REPAIR_IF_POSSIBLE = 0
Global Const XPRS_REPAIRINDEFINITEQ_NO_REPAIR = 1

' Enumeration values relating to Minimize/Maximize
Global Const XPRS_OBJ_MINIMIZE = 1
Global Const XPRS_OBJ_MAXIMIZE = -1

' Enumeration values relating to Set/GetControl/Attribinfo
Global Const XPRS_TYPE_NOTDEFINED = 0
Global Const XPRS_TYPE_INT = 1
Global Const XPRS_TYPE_INT64 = 2
Global Const XPRS_TYPE_DOUBLE = 3
Global Const XPRS_TYPE_STRING = 4

' Enumeration values relating to QCONVEXITY
Global Const XPRS_QCONVEXITY_UNKNOWN = -1
Global Const XPRS_QCONVEXITY_NONCONVEX = 0
Global Const XPRS_QCONVEXITY_CONVEX = 1
Global Const XPRS_QCONVEXITY_REPAIRABLE = 2
Global Const XPRS_QCONVEXITY_CONVEXCONE = 3
Global Const XPRS_QCONVEXITY_CONECONVERTABLE = 4

' Enumeration values relating to SOLINFO
Global Const XPRS_SOLINFO_ABSPRIMALINFEAS = 0
Global Const XPRS_SOLINFO_RELPRIMALINFEAS = 1
Global Const XPRS_SOLINFO_ABSDUALINFEAS = 2
Global Const XPRS_SOLINFO_RELDUALINFEAS = 3
Global Const XPRS_SOLINFO_MAXMIPFRACTIONAL = 4

' Bitfield values relating to XPRSmipsolpool_soln_flags
Global Const XPRS_ISUSERSOLUTION = 1
Global Const XPRS_ISREPROCESSEDUSERSOLUTION = 2


' Optimiser DLL Function Declarations
' NB You may have to change the path of "XPRS.DLL" so that VB can find the DLL.
Declare Function XPRScopycallbacks Lib "XPRS.DLL" (ByVal dest As Long, ByVal src As Long) As Long
Declare Function XPRScopycontrols Lib "XPRS.DLL" (ByVal dest As Long, ByVal src As Long) As Long
Declare Function XPRScopyprob Lib "XPRS.DLL" (ByVal dest As Long, ByVal src As Long, ByVal probname As String) As Long
Declare Function XPRScreateprob Lib "XPRS.DLL" (ByRef probholder As Long) As Long
Declare Function XPRSdestroyprob Lib "XPRS.DLL" (ByVal prob As Long) As Long

Declare Function XPRSinit Lib "XPRS.DLL" (ByVal path As String) As Long
Declare Function XPRSfree Lib "XPRS.DLL" () As Long
Private Declare Function XPRSgetbanner_C Lib "XPRS.DLL" Alias "XPRSgetbanner" (ByVal banner As String) As Long
Private Declare Function XPRSgetversion_C Lib "XPRS.DLL" Alias "XPRSgetversion" (ByVal version As String) As Long
Declare Function XPRSgetdaysleft Lib "XPRS.DLL" (ByRef daysleft As Long) As Long
Declare Function XPRSsetcheckedmode Lib "XPRS.DLL" (ByVal checked_mode As Long) As Long
Declare Function XPRSgetcheckedmode Lib "XPRS.DLL" (ByRef r_checked_mode As Long) As Long
Private Declare Function XPRSlicense_C Lib "XPRS.DLL" Alias "XPRSlicense" (ByRef i1 As Long, ByVal c1 As String) As Long
Declare Function XPRSbeginlicensing Lib "XPRS.DLL" (ByRef r_dontAlreadyHaveLicense As Long) As Long
Declare Function XPRSendlicensing Lib "XPRS.DLL" () As Long
Private Declare Function XPRSgetlicerrmsg_C Lib "XPRS.DLL" Alias "XPRSgetlicerrmsg" (ByVal msg As String, ByVal len_ As Long) As Long
